<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/fpo_toolbar"
        layout="@layout/app_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fpo_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/forget_password_txt"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="55dp"
            android:text="@string/enter_otp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:itemBackground="@color/white"
            android:textColor="@color/black"
            app:OtpItemCount="6"
            app:OtpItemWidth="50dp"
            android:layout_gravity="center"
            app:OtpCursorColor="@color/red"
            app:OtpLineColor="@color/black"
            app:OtpViewType="line"
            />

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/resend_otp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verify_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/red"
            android:padding="12dp"
            android:text="@string/verify_p"
            android:textAllCaps="false"
            app:cornerRadius="50dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>